--- a/weather forecast.html
+++ b/weather forecast.html
@@ -194,7 +194,8 @@
   </div>
   </div>
    <footer class="coder">
-       <p>Coded by Lesia Zhereb</p> 
+    <a href="https://github.com/LesiaZhereb/Weather-App_Final-project">Open-source code</a>
+       <p>, by Lesia Zhereb</p> 
     </footer>
   </body>
 
